# Particle-Viewer

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  .mailmap  .simplecov  .travis.yml  8BITDO_QUICK_START.md  CHANGELOG.md  CMakeLists.txt  FLATPAK.md  LICENSE  PIPELINE_FIX_INSTRUCTIONS.md  README.md  STEAM_DECK_QUICK_FIX.md  THIRD_PARTY_NOTICES.md  org.particleviewer.ParticleViewer.desktop  org.particleviewer.ParticleViewer.yaml  user-stories-gui-and-input.md
.devcontainer_exp/: Dockerfile  devcontainer.json
.github/: INSTRUCTIONS.md  SKILL_CREATION_GUIDE.md  copilot-instructions.md  pull_request_template.md
.github/agents/: amigo.md  architecture-reviewer.md  claim-enrichment.md  code-quality-reviewer.md  explorer.md  implementer.md  infrastructure-reviewer.md  postmortem-reviewer.md  researcher.md  skeptic.md  spec-compliance-reviewer.md  summarization-quality.md  synthesizer.md
.github/hooks/: hooks.json  pre-message  session-start
.github/skills/architecture-review/: SKILL.md
.github/skills/brainstorming/: SKILL.md
.github/skills/code-quality/: SKILL.md
.github/skills/contract-testing/: SKILL.md
.github/skills/cpp-patterns/: SKILL.md
.github/skills/cpp-safety/: SKILL.md
.github/skills/dispatching-parallel-agents/: SKILL.md
.github/skills/documentation/: SKILL.md
.github/skills/execution/: SKILL.md
.github/skills/finishing-a-development-branch/: SKILL.md
.github/skills/flatpak/: SKILL.md
.github/skills/honesty/: SKILL.md
.github/workflows/: cmake-multi-platform.yml  code-quality.yml  flatpak-pr.yml  release.yml  unit-tests.yml  visual-regression.yml
Documentation/Keyboard Layout/: keyboardLayout.psd
_codeql_build_dir/: CMakeCache.txt  CTestTestfile.cmake  Makefile  Viewer  cmake_install.cmake
_codeql_build_dir/tests/: CTestTestfile.cmake  Makefile  ParticleViewerTests  ParticleViewerTests[1]_include.cmake  ParticleViewerTests[1]_tests.cmake  cmake_install.cmake
cmake/unused/: Findassimp.cmake
docs/: 8BITDO_CONTROLLER_SETUP.md  CODING_STANDARDS.md  CONTROLLER_MAPPING.md  CONVENTIONAL_COMMITS.md  FILE_IO_ALTERNATIVES.md  IMGUI_INTEGRATION.md  RELEASE_PROCESS.md  RELEASE_WORKFLOW_SETUP.md  STEAM_DECK_FIX.md  TESTING_STANDARDS.md  VERSION_ALTERNATIVES_SUMMARY.md  VERSION_MANAGEMENT_ALTERNATIVES.md  WHY_FILE_BASED_VERSIONING.md  WINDOW_MANAGEMENT.md  coding-standards-formatting.md  coding-standards-modern-cpp.md  coding-standards-naming.md  coding-standards-organization.md  coding-standards-tools.md  release-process-automation.md  release-process-operations.md  release-process-versioning.md  testing-standards-aaa.md  testing-standards-assertions.md  testing-standards-coverage.md  testing-standards-mocking.md  testing-standards-organization.md
docs/flatpak/: FLATPAK.md  FLATPAK_VERIFICATION.md  flatpak-build.md  flatpak-gotchas.md  flatpak-users.md
docs/latex/: annotated.tex  dir_07228ccd9d32a56b1c7f3edc168f34f9.tex  dir_1474a07fa5d72fd56d2d3c405d24adfe.tex  dir_643ba0dda99db908ea76f10215dce212.tex  dir_8b3fe6ccf7f2b9fe09d56f0305c9f4e3.tex  dir_8e7f0a4084972bbcde40b48c9e88d20b.tex  refman.tex  structfloat2.tex  structfloat3.tex  structfloat4.tex
docs/testing/: integration-tests-mocking.md  integration-tests-patterns.md  integration-tests.md  visual-regression-authoring.md  visual-regression-ci.md  visual-regression.md
docs/visual-regression/: camera-positioning-guidelines.md  camera-positioning-lessons-learned.md  camera-positioning-root-cause.md  enhanced-debug-output-calculations.md  enhanced-debug-output-overlay-fields.md  enhanced-debug-output-use-cases.md  enhanced-debug-output.md
ed-add/: analyzer.cpp  get.cpp  settingsIO.cpp  settingsIO.hpp  setup.cpp
flatpak/: org.particleviewer.ParticleViewer.desktop  org.particleviewer.ParticleViewer.metainfo.xml  org.particleviewer.ParticleViewer.yaml
scripts/: FLATPAK_TESTING.md  OSXBuild.sh  build-flatpak.sh  extract-coverage.py  g++Build.sh  g++LinuxBuild.sh  g++OSXBuild.sh  gccBuild.sh  install-nvidia-gl-extension.sh  installUbuntuPreReqs.sh  linuxBuild.sh  linuxBuildAndInstall.sh  linuxPre.sh  osxPre.sh  test-flatpak-build-local.sh  validate-flatpak-manifest.sh
simulationIo/: CMakeLists.txt
simulationIo/include/simulationIo/: Float4.hpp  FrameData.hpp  LegacySimulationWriter  LegacySimulationWriter.hpp  SimulationInformation.hpp  SimulationWriter.hpp
simulationIo/src/: Float4.cpp  FrameData.cpp  LegacySimulationWriter.cpp
src/: Image.cpp  Image.hpp  ImageConverter.cpp  ImageConverter.hpp  camera.cpp  camera.hpp  clutter.hpp  debugOverlay.hpp  main.cpp  mesh.cpp  mesh.hpp  model.cpp  model.hpp  osFile.hpp  particle.cpp  particle.hpp  settingsIO.cpp  settingsIO.hpp  shader.cpp  shader.hpp  src.mk  src.project  untitled.h  viewer_app.cpp  viewer_app.hpp  windowConfig.hpp
src/Debug/: main.cpp.o.d  src  viewer
src/glad/: glad.c  glad.h
src/graphics/: GLFWContext.cpp  GLFWContext.hpp  IOpenGLContext.hpp  SDL3Context.cpp  SDL3Context.hpp
src/input/: controller_input.hpp  gamepad_input.hpp
src/models/: lowResSphere.h  obj2opengl.pl
src/shaders/: colorSphere.frag  colorSphere.vs  fragment.frag  lowResFragment.frag  lowResVertex.vs  sphereFragment.frag  sphereVertex.vs  vertex.vs
src/testing/: FramebufferCapture.hpp  ImageConverter.cpp  ImageConverter.hpp  PixelComparator.cpp  PixelComparator.hpp
src/tinyFileDialogs/: tinyfiledialogs.h
src/ui/: imgui_menu.cpp  imgui_menu.hpp
tests/: CMakeLists.txt  stb_image_write_impl.cpp
tests/core/: CameraTests.cpp  GamepadInputTests.cpp  OpenGLContextTests.cpp  ParticleTests.cpp  SDL3ContextTests.cpp  SettingsIOTests.cpp  ShaderTests.cpp  WindowConfigTests.cpp
tests/input/: ControllerInputTests.cpp
tests/integration/: DataLoadingPipelineTests.cpp  FramePlaybackTests.cpp  ShaderPipelineTests.cpp
tests/mocks/: MockOpenGL.cpp  MockOpenGL.hpp  MockOpenGLContext.hpp
tests/testing/: ImageConverterTests.cpp  ImageTests.cpp  PixelComparatorTests.cpp
tests/visual-regression/: .gitignore  RenderingRegressionTests.cpp  VisualRegressionTests.cpp  VisualTestHelpers.hpp
utilities/cubeBuilder/: CMakeLists.txt
(+92 files in other folders)
